--- a/style.css
+++ b/style.css
@@ -101,17 +101,33 @@ td, th {
 .form-content {
     font-family: 'Roboto', sans-serif;
     position: absolute;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: 1fr 1fr 1fr 1fr/ 1fr 1fr;
+    align-items: center;
     background-color: white;
     border: 4px solid rgb(202, 180, 162);
     border-radius: 16px;
+    height: 250px;
     width: 400px;
-    padding: 16px 32px;
+    padding: 0 32px;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+#form-title {
+    grid-area: 1 / 1 / 1 / 3;
+    font-family: 'Parisienne', cursive;
+    background-color: #d2c9c1;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+
+}
+
+.form-button {
+    padding: 5px 20px;
 }
 
 .show-popup {
