--- a/style.css
+++ b/style.css
@@ -76,8 +76,19 @@ margin: 0;
 td, th {
     text-align: start;
     border: 1px solid #999;
-    padding: 0.5rem;
+    padding: 5px;
   }
+
+td:nth-last-child(-n+3) {
+    border :none;
+    text-align: end;
+    width: 50px;
+  }
+
+th:nth-last-child(-n+2) {
+    border :none;
+    width: 50px;
+}
 
 .footer {
     grid-area: footer;
@@ -135,4 +146,11 @@ td, th {
     visibility: visible;
     transform: scale(1.0);
     z-index: 2;
+}
+
+.change-button {
+}
+
+.delete-button {
+    height: 35px;
 }
